--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>My Github site </title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
    <p> Hey! It Worked! </p>
+  
   </body>
 </html>
